fixed spacing on h1

--- a/static/style.css
+++ b/static/style.css
@@ -16,6 +16,7 @@ main {
 }
 
 h1 {
+	line-height: 50px;
 	font-size: 50px;
 	margin: 0;
 	border-bottom: 2px solid #131;
